first and second part charts up

--- a/survey_analysis_pres.ipynb
+++ b/survey_analysis_pres.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -842,14 +842,15 @@
     }
    ],
    "source": [
-    "bar_plot(df=answers, columns=[\"Company_Type\"], title=COMPANY_TYPE_QUESTION, \n",
+    "bar_plot(df=answers, columns=[\"Company_Type\"], title=COMPANY_TYPE_QUESTION,\n",
+    "         filename=\"part2_01_campione_contesto_professionale.pdf\",\n",
     "         width=0.8, sorted=\"values\", wrapping=15, legend=False, \n",
     "         axis_label=\"Tipo di Azidenda/Organizzazione\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +947,7 @@
        "9  Olandese, ma siamo tutti italiani      1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -984,14 +985,15 @@
    ],
    "source": [
     "#Backup\n",
-    "bar_plot(df=answers, columns=[\"Gender\", \"Company_Type\"], title=COMPANY_TYPE_QUESTION, \n",
+    "bar_plot(df=answers, columns=[\"Gender\", \"Company_Type\"], title=COMPANY_TYPE_QUESTION,\n",
+    "         filename=\"part2_backup_tipo_azienda_per_genere.pdf\",\n",
     "         axis_label=\"Tipo di Azienda/Organizzazione\", width=0.8, sorted=\"values\", wrapping=15, \n",
     "         legend=False, unstack_ord=(0, ), colors=gender_cmap.colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1005,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1031,13 +1033,14 @@
     }
    ],
    "source": [
-    "bar_plot(df=answers, columns=[\"Company_Size\"], title=COMPANY_SIZE_QUESTION, \n",
+    "bar_plot(df=answers, columns=[\"Company_Size\"], title=COMPANY_SIZE_QUESTION,\n",
+    "         filename=\"part2_02_campione_prof_dimensione_azienda.pdf\",\n",
     "         axis_label=\"Nr. di Dipendenti nell'Azienda/Organizzazione\",)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1054,14 +1057,16 @@
     }
    ],
    "source": [
-    "bar_plot(df=answers, columns=[\"Company_Size\"], title=f\"{COMPANY_SIZE_QUESTION} - AZIENDA ITALIANA\",\n",
+    "bar_plot(df=answers, columns=[\"Company_Size\"],\n",
+    "         title=f\"{COMPANY_SIZE_QUESTION} - AZIENDA ITALIANA\",\n",
+    "         filename=\"part2_03_dimensione_azienda_italiana.pdf\",\n",
     "         selection=answers.Company_Type==\"Italiana\",\n",
     "         axis_label=\"Nr. di Dipendenti nell'Azienda/Organizzazione\",)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1078,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1104,12 +1109,20 @@
    ],
    "source": [
     "bar_plot(df=answers, columns=[\"Company_Women_Ratio\"], title=WOMEN_RATIO_QUESTION,\n",
+    "         filename=\"part02_04_rapporto_donne_dev.pdf\",\n",
     "         selection=answers.Company_Size != \"non lavoro\", sorted=\"index\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interessante notare come delle 55 \"Nessuna\" donna dev in Azienda, 49 siano nella sola Azienda Italiana"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1128,13 +1141,14 @@
    "source": [
     "bar_plot(df=answers, columns=[\"Company_Women_Ratio\"],\n",
     "         title=\"Rapporto di Donne Sviluppatrici nella sola Azienda ITALIANA\",\n",
+    "         filename=\"part2_05_rapporto_donne_dev_azienda_ita.pdf\",\n",
     "         selection=((answers.Company_Size != \"non lavoro\") & (answers.Company_Type == \"Italiana\")),\n",
     "         sorted=\"index\", value_lim=172)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1160,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1177,6 +1191,7 @@
    ],
    "source": [
     "bar_plot(df=answers, columns=[\"Company_Diversity_Policy\"],\n",
+    "         filename=\"part2_06_politiche_azienda_diversity.pdf\",\n",
     "         title=DIVERSITY_POLICY_QUESTION, sorted=\"index\")"
    ]
   },
